Fixed spacing for about me content (PC)

--- a/src/Component/Styles.css
+++ b/src/Component/Styles.css
@@ -16,7 +16,7 @@
   color: #3b3b3c;
   font-size: 15px;
   position: relative;
-  top: 107vh;
+  top: 120vh;
 }
 
 .textbox2 {
@@ -28,7 +28,7 @@
   color: #3b3b3c;
   font-size: 15px;
   position: relative;
-  top: 112vh;
+  top: 125vh;
 }
 .textbox3 {
   width: 100%;
@@ -39,7 +39,7 @@
   color: #3b3b3c;
   font-size: 15px;
   position: relative;
-  top: 167vh;
+  top: 180vh;
 }
 
 
